# wordle-api

./: .gitignore  Cargo.toml  README.md
src/: answers.rs  main.rs  words.rs
